package se.qxx.jukebox.domain;

option java_package = "se.qxx.jukebox.domain";
option java_generic_services = true;

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Enumerations
//---------------------------------------------------------------------------------------

enum Identifier {
	Filename = 1;
	ParentDirectory = 2;
	NFO = 3;
	Parser = 4;
}

enum Rating {
	NotMatched = 1;
	ProbableMatch = 2;
	PositiveMatch = 3;
	ExactMatch = 4;
	SubsExist = 5;
}

enum RequestType {
	TypeMovie = 1;
	TypeSeries = 2;
	TypeSeason = 3;
	TypeEpisode = 4;
}

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Objects
//---------------------------------------------------------------------------------------
message Version {
	required int32 ID = 1;
	required int32 major = 2;
	required int32 minor = 3;
}

message SubtitleQueue {
	required int32 ID = 1; 
	optional int64 subtitleQueuedAt = 2;
	optional int64 subtitleRetreivedAt = 3;
	required int32 subtitleRetreiveResult = 4 [default = 0];
}

message Series {
	required int32 ID = 1;
	repeated Season season = 2;
	
	optional string title = 3;
	optional int32 year = 4;

	optional string imdb_url = 5;
	optional string imdb_id = 6;	

	optional string story = 7;
	optional bytes image = 8;
	repeated string genre = 9;
	
	optional string rating = 10;
	
	required string identifiedTitle = 11;
	
	optional bytes thumbnail = 12;	
}

message Season {
	required int32 ID = 1;
	required int32 seasonNumber = 2;
	repeated Episode episode = 3;
	
	optional string title = 4;
	optional int32 year = 5;

	optional string imdb_url = 6;
	optional string imdb_id = 7;	

	optional string story = 8;
	optional bytes image = 9;
	repeated string genre = 10;
	
	optional bytes thumbnail = 11;	
}

message Episode {
	required int32 ID = 1;
	repeated Media media = 2;	
	
	optional int32 episodeNumber = 3;
	
	optional string title = 4;
	optional int32 year = 5;
	optional string type = 6;
	optional string format = 7;
	optional string sound = 8;
	optional string language = 9;
	optional string groupName = 10;
	optional string imdb_url = 11;
	optional string imdb_id = 12;	
	optional int32 duration = 13;
	optional string rating = 14;
	optional string director = 15;
	optional string story = 16;
	optional bytes image = 17;
	repeated string genre = 18;
	optional Identifier identifier = 19;
	optional int32 identifierRating = 20;
	optional bool watched = 21;
			
	optional SubtitleQueue subtitleQueue = 22;

	optional int64 firstAirDate = 23;
	
	optional bytes thumbnail = 24;

}

message Movie {
	required int32 ID = 1;
	repeated Media media = 2;	
	optional string title = 3;
	optional int32 year = 4;
	optional string type = 5;
	optional string format = 6;
	optional string sound = 7;
	optional string language = 8;
	optional string groupName = 9;
	optional string imdb_url = 10;
	optional string imdb_id = 11;	
	optional int32 duration = 12;
	optional string rating = 13;
	optional string director = 14;
	optional string story = 15;
	optional bytes image = 16;
	repeated string genre = 17;
	optional Identifier identifier = 18;
	optional int32 identifierRating = 19;
	optional bool watched = 20;
			
	repeated string blacklist = 21;

	optional SubtitleQueue subtitleQueue = 22;

	required string identifiedTitle = 23;
	
	optional bytes thumbnail = 24;	
}

message Subtitle {
	required int32 ID = 1;
	required string filename = 2;
	required string description = 3;
	required Rating rating = 4;
	required int32 mediaIndex = 5;
	required string language = 6;
	
	required bytes textdata = 7;
}

message Media {
	required int32 ID = 1;
	required int32 index = 2;
	required string filename = 3;
	required string filepath = 4;
	optional int32 metaDuration = 5;
	optional string metaFramerate = 6;
	repeated Subtitle subs = 7;
}

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Requests
//---------------------------------------------------------------------------------------

message Empty{};

message JukeboxRequestGeneral {
	required string playerName = 1;
}

message JukeboxRequestID {
	required int32 id = 1;
	required RequestType requestType = 2;
}

message JukeboxRequestListMovies {
	optional string searchString = 2;
	optional bool returnFullSizePictures = 3 [default=true];
	
	optional int32 startIndex = 4;
	optional int32 nrOfItems = 5;
	optional RequestType requestType = 6;
	
	optional int32 seriesID = 7;
	optional int32 seasonID = 8;
}

message JukeboxRequestStartMovie {
	required int32 movieOrEpisodeId = 1;
	optional string playerName = 2;
	required RequestType requestType = 3;
	
}

message JukeboxRequestSeek {
	required string playerName = 1;
	required int32 seconds = 2;
}

message JukeboxRequestListSubtitles {
	required int32 mediaId = 1;
}

message JukeboxRequestSetSubtitle {
	required string playerName = 1;
	required int32 mediaID = 2;
	required string subtitleDescription = 3;
}

//---------------------------------------------------------------------------------------
//--------------------------------------------------------------- JukeboxFront Requests
//---------------------------------------------------------------------------------------

message JukeboxFrontStartMovie {
	required string mrl = 1;
	optional string subFile = 2;
}

message JukeboxFrontSeek {
	required int32 seconds = 1;
}

message JukeboxFrontSetSubtitle {
	required string subFile = 1;
}

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- Responses
//---------------------------------------------------------------------------------------

message JukeboxResponseListMovies {
	repeated Movie movies = 1;
	repeated Series series = 2;
	repeated Season season = 3;
	optional int32 totalMovies = 4;
	optional int32 totalSeries = 5;
	optional int32 totalSeasons = 6;
	optional int32 totalEpisodes = 7;  
}

message JukeboxResponseListPlayers {
	repeated string hostname = 1;
}

message JukeboxResponseListSubtitles {
	repeated Subtitle subtitle = 1;
}

message JukeboxResponseStartMovie { 
	repeated Subtitle subtitle = 1;
	optional string uri = 2;
	repeated string subtitleUris = 3;
}

message JukeboxResponseTime {
	required int32 seconds = 1;
	required string filename = 2;
}

message JukeboxResponseIsPlaying {
	required bool isPlaying = 1;
}

message JukeboxResponseGetTitle {
	required string title = 1;
}

//---------------------------------------------------------------------------------------
//----------------------------------------------------------------------- RPC
//---------------------------------------------------------------------------------------

service JukeboxService {
	rpc ListMovies (JukeboxRequestListMovies) returns (JukeboxResponseListMovies);
	rpc ListPlayers (Empty) returns (JukeboxResponseListPlayers);
	rpc StartMovie(JukeboxRequestStartMovie) returns (JukeboxResponseStartMovie);
	rpc StopMovie(JukeboxRequestGeneral) returns (Empty);
	rpc PauseMovie(JukeboxRequestGeneral) returns (Empty);
	rpc Seek(JukeboxRequestSeek) returns (Empty);
	rpc SwitchVRatio(JukeboxRequestGeneral) returns (Empty);
	rpc GetTime(JukeboxRequestGeneral) returns (JukeboxResponseTime);
	rpc isPlaying(JukeboxRequestGeneral) returns (JukeboxResponseIsPlaying);
	rpc GetTitle(JukeboxRequestGeneral) returns (JukeboxResponseGetTitle);
	rpc ToggleFullscreen(JukeboxRequestGeneral) returns (Empty);
	
	rpc Blacklist(JukeboxRequestID) returns (Empty);
	rpc ToggleWatched(JukeboxRequestID) returns (Empty);	
	rpc ReIdentify(JukeboxRequestID) returns (Empty);
	
	rpc ListSubtitles(JukeboxRequestListSubtitles) returns (JukeboxResponseListSubtitles);
	rpc SetSubtitle(JukeboxRequestSetSubtitle) returns (Empty);
	
	rpc Wakeup(JukeboxRequestGeneral) returns (Empty);
	rpc Suspend(JukeboxRequestGeneral) returns (Empty);
	
}
 
 
service JukeboxFrontService {
	rpc StartMovie(JukeboxFrontStartMovie) returns (Empty);
	rpc StopMovie(Empty) returns (Empty);
	rpc PauseMovie(Empty) returns (Empty);
	rpc Seek(JukeboxFrontSeek) returns (Empty);
	rpc SwitchVRatio(Empty) returns (Empty);
	rpc GetTime(Empty) returns (JukeboxResponseTime);
	rpc isPlaying(Empty) returns (JukeboxResponseIsPlaying);
	rpc GetTitle(Empty) returns (JukeboxResponseGetTitle);
}
